Input component: Fixed double borders (#3917)

--- a/src/Sulu/Bundle/AdminBundle/Resources/js/components/Input/input.scss
+++ b/src/Sulu/Bundle/AdminBundle/Resources/js/components/Input/input.scss
@@ -59,7 +59,6 @@ $backgroundColor: $white;
     flex-grow: 0;
     color: $iconColor;
     padding: 0 10px;
-    border-right: $inputBorderWidth solid $inputBorderColor;
     line-height: calc($inputHeight - 2 * $iconBorderPadding);
 }
 
